🐙 adding github's octicons
See https://octicons.github.com/ for reference

--- a/src/proton.css
+++ b/src/proton.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * ________             _____
  * ___  __ \______________  /_____________
@@ -11,3 +12,768 @@
  */
 body {
   background: #4978d4; }
+
+@font-face {
+  font-family: 'ghicn';
+  src: url("./fonts/octicons.eot?#iefix&v=932555081d58ad24701c658c97328237bbc156d2") format("embedded-opentype"), url("./fonts/octicons.woff?v=932555081d58ad24701c658c97328237bbc156d2") format("woff"), url("./fonts/octicons.ttf?v=932555081d58ad24701c658c97328237bbc156d2") format("truetype"), url("./fonts/octicons.svg?v=932555081d58ad24701c658c97328237bbc156d2#ghicn") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+.ghicn, .mega-ghicn {
+  font: normal normal normal 16px/1 ghicn;
+  display: inline-block;
+  text-decoration: none;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.mega-ghicn {
+  font-size: 32px; }
+
+.ghicn-alert:before {
+  content: '\f02d'; }
+
+/*  */
+.ghicn-alignment-align:before {
+  content: '\f08a'; }
+
+/*  */
+.ghicn-alignment-aligned-to:before {
+  content: '\f08e'; }
+
+/*  */
+.ghicn-alignment-unalign:before {
+  content: '\f08b'; }
+
+/*  */
+.ghicn-arrow-down:before {
+  content: '\f03f'; }
+
+/*  */
+.ghicn-arrow-left:before {
+  content: '\f040'; }
+
+/*  */
+.ghicn-arrow-right:before {
+  content: '\f03e'; }
+
+/*  */
+.ghicn-arrow-small-down:before {
+  content: '\f0a0'; }
+
+/*  */
+.ghicn-arrow-small-left:before {
+  content: '\f0a1'; }
+
+/*  */
+.ghicn-arrow-small-right:before {
+  content: '\f071'; }
+
+/*  */
+.ghicn-arrow-small-up:before {
+  content: '\f09f'; }
+
+/*  */
+.ghicn-arrow-up:before {
+  content: '\f03d'; }
+
+/*  */
+.ghicn-beer:before {
+  content: '\f069'; }
+
+/*  */
+.ghicn-book:before {
+  content: '\f007'; }
+
+/*  */
+.ghicn-bookmark:before {
+  content: '\f07b'; }
+
+/*  */
+.ghicn-briefcase:before {
+  content: '\f0d3'; }
+
+/*  */
+.ghicn-broadcast:before {
+  content: '\f048'; }
+
+/*  */
+.ghicn-browser:before {
+  content: '\f0c5'; }
+
+/*  */
+.ghicn-bug:before {
+  content: '\f091'; }
+
+/*  */
+.ghicn-calendar:before {
+  content: '\f068'; }
+
+/*  */
+.ghicn-check:before {
+  content: '\f03a'; }
+
+/*  */
+.ghicn-checklist:before {
+  content: '\f076'; }
+
+/*  */
+.ghicn-chevron-down:before {
+  content: '\f0a3'; }
+
+/*  */
+.ghicn-chevron-left:before {
+  content: '\f0a4'; }
+
+/*  */
+.ghicn-chevron-right:before {
+  content: '\f078'; }
+
+/*  */
+.ghicn-chevron-up:before {
+  content: '\f0a2'; }
+
+/*  */
+.ghicn-circle-slash:before {
+  content: '\f084'; }
+
+/*  */
+.ghicn-circuit-board:before {
+  content: '\f0d6'; }
+
+/*  */
+.ghicn-clippy:before {
+  content: '\f035'; }
+
+/*  */
+.ghicn-clock:before {
+  content: '\f046'; }
+
+/*  */
+.ghicn-cloud-download:before {
+  content: '\f00b'; }
+
+/*  */
+.ghicn-cloud-upload:before {
+  content: '\f00c'; }
+
+/*  */
+.ghicn-code:before {
+  content: '\f05f'; }
+
+/*  */
+.ghicn-color-mode:before {
+  content: '\f065'; }
+
+/*  */
+.ghicn-comment-add:before,
+.ghicn-comment:before {
+  content: '\f02b'; }
+
+/*  */
+.ghicn-comment-discussion:before {
+  content: '\f04f'; }
+
+/*  */
+.ghicn-credit-card:before {
+  content: '\f045'; }
+
+/*  */
+.ghicn-dash:before {
+  content: '\f0ca'; }
+
+/*  */
+.ghicn-dashboard:before {
+  content: '\f07d'; }
+
+/*  */
+.ghicn-database:before {
+  content: '\f096'; }
+
+/*  */
+.ghicn-device-camera:before {
+  content: '\f056'; }
+
+/*  */
+.ghicn-device-camera-video:before {
+  content: '\f057'; }
+
+/*  */
+.ghicn-device-desktop:before {
+  content: '\f27c'; }
+
+/*  */
+.ghicn-device-mobile:before {
+  content: '\f038'; }
+
+/*  */
+.ghicn-diff:before {
+  content: '\f04d'; }
+
+/*  */
+.ghicn-diff-added:before {
+  content: '\f06b'; }
+
+/*  */
+.ghicn-diff-ignored:before {
+  content: '\f099'; }
+
+/*  */
+.ghicn-diff-modified:before {
+  content: '\f06d'; }
+
+/*  */
+.ghicn-diff-removed:before {
+  content: '\f06c'; }
+
+/*  */
+.ghicn-diff-renamed:before {
+  content: '\f06e'; }
+
+/*  */
+.ghicn-ellipsis:before {
+  content: '\f09a'; }
+
+/*  */
+.ghicn-eye-unwatch:before,
+.ghicn-eye-watch:before,
+.ghicn-eye:before {
+  content: '\f04e'; }
+
+/*  */
+.ghicn-file-binary:before {
+  content: '\f094'; }
+
+/*  */
+.ghicn-file-code:before {
+  content: '\f010'; }
+
+/*  */
+.ghicn-file-directory:before {
+  content: '\f016'; }
+
+/*  */
+.ghicn-file-media:before {
+  content: '\f012'; }
+
+/*  */
+.ghicn-file-pdf:before {
+  content: '\f014'; }
+
+/*  */
+.ghicn-file-submodule:before {
+  content: '\f017'; }
+
+/*  */
+.ghicn-file-symlink-directory:before {
+  content: '\f0b1'; }
+
+/*  */
+.ghicn-file-symlink-file:before {
+  content: '\f0b0'; }
+
+/*  */
+.ghicn-file-text:before {
+  content: '\f011'; }
+
+/*  */
+.ghicn-file-zip:before {
+  content: '\f013'; }
+
+/*  */
+.ghicn-flame:before {
+  content: '\f0d2'; }
+
+/*  */
+.ghicn-fold:before {
+  content: '\f0cc'; }
+
+/*  */
+.ghicn-gear:before {
+  content: '\f02f'; }
+
+/*  */
+.ghicn-gift:before {
+  content: '\f042'; }
+
+/*  */
+.ghicn-gist:before {
+  content: '\f00e'; }
+
+/*  */
+.ghicn-gist-secret:before {
+  content: '\f08c'; }
+
+/*  */
+.ghicn-git-branch-create:before,
+.ghicn-git-branch-delete:before,
+.ghicn-git-branch:before {
+  content: '\f020'; }
+
+/*  */
+.ghicn-git-commit:before {
+  content: '\f01f'; }
+
+/*  */
+.ghicn-git-compare:before {
+  content: '\f0ac'; }
+
+/*  */
+.ghicn-git-merge:before {
+  content: '\f023'; }
+
+/*  */
+.ghicn-git-pull-request-abandoned:before,
+.ghicn-git-pull-request:before {
+  content: '\f009'; }
+
+/*  */
+.ghicn-globe:before {
+  content: '\f0b6'; }
+
+/*  */
+.ghicn-graph:before {
+  content: '\f043'; }
+
+/*  */
+.ghicn-heart:before {
+  content: '\2665'; }
+
+/* ♥ */
+.ghicn-history:before {
+  content: '\f07e'; }
+
+/*  */
+.ghicn-home:before {
+  content: '\f08d'; }
+
+/*  */
+.ghicn-horizontal-rule:before {
+  content: '\f070'; }
+
+/*  */
+.ghicn-hourglass:before {
+  content: '\f09e'; }
+
+/*  */
+.ghicn-hubot:before {
+  content: '\f09d'; }
+
+/*  */
+.ghicn-inbox:before {
+  content: '\f0cf'; }
+
+/*  */
+.ghicn-info:before {
+  content: '\f059'; }
+
+/*  */
+.ghicn-issue-closed:before {
+  content: '\f028'; }
+
+/*  */
+.ghicn-issue-opened:before {
+  content: '\f026'; }
+
+/*  */
+.ghicn-issue-reopened:before {
+  content: '\f027'; }
+
+/*  */
+.ghicn-jersey:before {
+  content: '\f019'; }
+
+/*  */
+.ghicn-jump-down:before {
+  content: '\f072'; }
+
+/*  */
+.ghicn-jump-left:before {
+  content: '\f0a5'; }
+
+/*  */
+.ghicn-jump-right:before {
+  content: '\f0a6'; }
+
+/*  */
+.ghicn-jump-up:before {
+  content: '\f073'; }
+
+/*  */
+.ghicn-key:before {
+  content: '\f049'; }
+
+/*  */
+.ghicn-keyboard:before {
+  content: '\f00d'; }
+
+/*  */
+.ghicn-law:before {
+  content: '\f0d8'; }
+
+/*  */
+.ghicn-light-bulb:before {
+  content: '\f000'; }
+
+/*  */
+.ghicn-link:before {
+  content: '\f05c'; }
+
+/*  */
+.ghicn-link-external:before {
+  content: '\f07f'; }
+
+/*  */
+.ghicn-list-ordered:before {
+  content: '\f062'; }
+
+/*  */
+.ghicn-list-unordered:before {
+  content: '\f061'; }
+
+/*  */
+.ghicn-location:before {
+  content: '\f060'; }
+
+/*  */
+.ghicn-gist-private:before,
+.ghicn-mirror-private:before,
+.ghicn-git-fork-private:before,
+.ghicn-lock:before {
+  content: '\f06a'; }
+
+/*  */
+.ghicn-logo-github:before {
+  content: '\f092'; }
+
+/*  */
+.ghicn-mail:before {
+  content: '\f03b'; }
+
+/*  */
+.ghicn-mail-read:before {
+  content: '\f03c'; }
+
+/*  */
+.ghicn-mail-reply:before {
+  content: '\f051'; }
+
+/*  */
+.ghicn-mark-github:before {
+  content: '\f00a'; }
+
+/*  */
+.ghicn-markdown:before {
+  content: '\f0c9'; }
+
+/*  */
+.ghicn-megaphone:before {
+  content: '\f077'; }
+
+/*  */
+.ghicn-mention:before {
+  content: '\f0be'; }
+
+/*  */
+.ghicn-microscope:before {
+  content: '\f089'; }
+
+/*  */
+.ghicn-milestone:before {
+  content: '\f075'; }
+
+/*  */
+.ghicn-mirror-public:before,
+.ghicn-mirror:before {
+  content: '\f024'; }
+
+/*  */
+.ghicn-mortar-board:before {
+  content: '\f0d7'; }
+
+/*  */
+.ghicn-move-down:before {
+  content: '\f0a8'; }
+
+/*  */
+.ghicn-move-left:before {
+  content: '\f074'; }
+
+/*  */
+.ghicn-move-right:before {
+  content: '\f0a9'; }
+
+/*  */
+.ghicn-move-up:before {
+  content: '\f0a7'; }
+
+/*  */
+.ghicn-mute:before {
+  content: '\f080'; }
+
+/*  */
+.ghicn-no-newline:before {
+  content: '\f09c'; }
+
+/*  */
+.ghicn-octoface:before {
+  content: '\f008'; }
+
+/*  */
+.ghicn-organization:before {
+  content: '\f037'; }
+
+/*  */
+.ghicn-package:before {
+  content: '\f0c4'; }
+
+/*  */
+.ghicn-paintcan:before {
+  content: '\f0d1'; }
+
+/*  */
+.ghicn-pencil:before {
+  content: '\f058'; }
+
+/*  */
+.ghicn-person-add:before,
+.ghicn-person-follow:before,
+.ghicn-person:before {
+  content: '\f018'; }
+
+/*  */
+.ghicn-pin:before {
+  content: '\f041'; }
+
+/*  */
+.ghicn-playback-fast-forward:before {
+  content: '\f0bd'; }
+
+/*  */
+.ghicn-playback-pause:before {
+  content: '\f0bb'; }
+
+/*  */
+.ghicn-playback-play:before {
+  content: '\f0bf'; }
+
+/*  */
+.ghicn-playback-rewind:before {
+  content: '\f0bc'; }
+
+/*  */
+.ghicn-plug:before {
+  content: '\f0d4'; }
+
+/*  */
+.ghicn-repo-create:before,
+.ghicn-gist-new:before,
+.ghicn-file-directory-create:before,
+.ghicn-file-add:before,
+.ghicn-plus:before {
+  content: '\f05d'; }
+
+/*  */
+.ghicn-podium:before {
+  content: '\f0af'; }
+
+/*  */
+.ghicn-primitive-dot:before {
+  content: '\f052'; }
+
+/*  */
+.ghicn-primitive-square:before {
+  content: '\f053'; }
+
+/*  */
+.ghicn-pulse:before {
+  content: '\f085'; }
+
+/*  */
+.ghicn-puzzle:before {
+  content: '\f0c0'; }
+
+/*  */
+.ghicn-question:before {
+  content: '\f02c'; }
+
+/*  */
+.ghicn-quote:before {
+  content: '\f063'; }
+
+/*  */
+.ghicn-radio-tower:before {
+  content: '\f030'; }
+
+/*  */
+.ghicn-repo-delete:before,
+.ghicn-repo:before {
+  content: '\f001'; }
+
+/*  */
+.ghicn-repo-clone:before {
+  content: '\f04c'; }
+
+/*  */
+.ghicn-repo-force-push:before {
+  content: '\f04a'; }
+
+/*  */
+.ghicn-gist-fork:before,
+.ghicn-repo-forked:before {
+  content: '\f002'; }
+
+/*  */
+.ghicn-repo-pull:before {
+  content: '\f006'; }
+
+/*  */
+.ghicn-repo-push:before {
+  content: '\f005'; }
+
+/*  */
+.ghicn-rocket:before {
+  content: '\f033'; }
+
+/*  */
+.ghicn-rss:before {
+  content: '\f034'; }
+
+/*  */
+.ghicn-ruby:before {
+  content: '\f047'; }
+
+/*  */
+.ghicn-screen-full:before {
+  content: '\f066'; }
+
+/*  */
+.ghicn-screen-normal:before {
+  content: '\f067'; }
+
+/*  */
+.ghicn-search-save:before,
+.ghicn-search:before {
+  content: '\f02e'; }
+
+/*  */
+.ghicn-server:before {
+  content: '\f097'; }
+
+/*  */
+.ghicn-settings:before {
+  content: '\f07c'; }
+
+/*  */
+.ghicn-log-in:before,
+.ghicn-sign-in:before {
+  content: '\f036'; }
+
+/*  */
+.ghicn-log-out:before,
+.ghicn-sign-out:before {
+  content: '\f032'; }
+
+/*  */
+.ghicn-split:before {
+  content: '\f0c6'; }
+
+/*  */
+.ghicn-squirrel:before {
+  content: '\f0b2'; }
+
+/*  */
+.ghicn-star-add:before,
+.ghicn-star-delete:before,
+.ghicn-star:before {
+  content: '\f02a'; }
+
+/*  */
+.ghicn-steps:before {
+  content: '\f0c7'; }
+
+/*  */
+.ghicn-stop:before {
+  content: '\f08f'; }
+
+/*  */
+.ghicn-repo-sync:before,
+.ghicn-sync:before {
+  content: '\f087'; }
+
+/*  */
+.ghicn-tag-remove:before,
+.ghicn-tag-add:before,
+.ghicn-tag:before {
+  content: '\f015'; }
+
+/*  */
+.ghicn-telescope:before {
+  content: '\f088'; }
+
+/*  */
+.ghicn-terminal:before {
+  content: '\f0c8'; }
+
+/*  */
+.ghicn-three-bars:before {
+  content: '\f05e'; }
+
+/*  */
+.ghicn-thumbsdown:before {
+  content: '\f0db'; }
+
+/*  */
+.ghicn-thumbsup:before {
+  content: '\f0da'; }
+
+/*  */
+.ghicn-tools:before {
+  content: '\f031'; }
+
+/*  */
+.ghicn-trashcan:before {
+  content: '\f0d0'; }
+
+/*  */
+.ghicn-triangle-down:before {
+  content: '\f05b'; }
+
+/*  */
+.ghicn-triangle-left:before {
+  content: '\f044'; }
+
+/*  */
+.ghicn-triangle-right:before {
+  content: '\f05a'; }
+
+/*  */
+.ghicn-triangle-up:before {
+  content: '\f0aa'; }
+
+/*  */
+.ghicn-unfold:before {
+  content: '\f039'; }
+
+/*  */
+.ghicn-unmute:before {
+  content: '\f0ba'; }
+
+/*  */
+.ghicn-versions:before {
+  content: '\f064'; }
+
+/*  */
+.ghicn-remove-close:before,
+.ghicn-x:before {
+  content: '\f081'; }
+
+/*  */
+.ghicn-zap:before {
+  content: '\26A1'; }
+
+/* ⚡ */
