--- a/src/proton.css
+++ b/src/proton.css
@@ -10,12 +10,9 @@
  * Copyright: 2015
  * License: MIT
  */
-body {
-  background: #4978d4; }
-
 @font-face {
   font-family: 'ghicn';
-  src: url("./fonts/octicons.eot?#iefix&v=932555081d58ad24701c658c97328237bbc156d2") format("embedded-opentype"), url("./fonts/octicons.woff?v=932555081d58ad24701c658c97328237bbc156d2") format("woff"), url("./fonts/octicons.ttf?v=932555081d58ad24701c658c97328237bbc156d2") format("truetype"), url("./fonts/octicons.svg?v=932555081d58ad24701c658c97328237bbc156d2#ghicn") format("svg");
+  src: url("./fonts/octicons.eot?#iefix") format("embedded-opentype"), url("./fonts/octicons.woff") format("woff"), url("./fonts/octicons.ttf") format("truetype"), url("./fonts/octicons.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -777,3 +774,319 @@ body {
   content: '\26A1'; }
 
 /* ⚡ */
+/* @import "ui-variables";
+@import "octicon-mixins"; */
+atom-notifications {
+  display: block;
+  z-index: 1000;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+  font-size: 1.2em;
+  overflow-x: hidden;
+  overflow-y: auto;
+  pointer-events: none; }
+  atom-notifications::-webkit-scrollbar {
+    display: none; }
+  atom-notifications atom-notification .close-all {
+    display: none; }
+  atom-notifications atom-notification:first-child .close-all {
+    display: block; }
+  atom-notifications atom-notification:first-child.has-close .message {
+    padding-right: 115px; }
+  atom-notifications atom-notification:only-child .close-all {
+    display: none; }
+  atom-notifications atom-notification:only-child.has-close .message {
+    padding-right: 34px; }
+
+atom-notification {
+  float: right;
+  clear: right;
+  position: relative;
+  width: 450px;
+  padding-left: 30px;
+  margin-bottom: 2px;
+  max-height: 800px;
+  word-wrap: break-word;
+  pointer-events: auto; }
+  atom-notification.icon:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 100%;
+    padding-top: 10px;
+    text-align: center;
+    border-radius: 2px 0 0 2px; }
+  atom-notification:after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    height: 2px; }
+  atom-notification .meta,
+  atom-notification .close,
+  atom-notification .detail,
+  atom-notification .stack-toggle,
+  atom-notification .stack-container {
+    display: none; }
+  atom-notification.fatal .meta,
+  atom-notification.has-description .meta,
+  atom-notification.has-buttons .meta,
+  atom-notification.has-close .close,
+  atom-notification.has-detail .detail,
+  atom-notification.has-stack .stack-toggle,
+  atom-notification.has-stack .stack-container {
+    display: block; }
+  atom-notification .item {
+    padding: 10px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1); }
+    atom-notification .item.message {
+      border-top: none; }
+      atom-notification .item.message p:last-child {
+        margin-bottom: 0; }
+  atom-notification.has-close .message {
+    padding-right: 34px; }
+  atom-notification .content {
+    border-radius: 0 2px 2px 0; }
+  atom-notification .message {
+    max-height: 200px;
+    overflow-y: auto; }
+  atom-notification .close-all.btn {
+    position: absolute;
+    top: 7px;
+    right: 38px;
+    background: none; }
+  atom-notification .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
+    text-align: center;
+    font-size: 16px;
+    text-shadow: none;
+    color: inherit;
+    opacity: .3; }
+    atom-notification .close:hover, atom-notification .close:focus {
+      opacity: 1;
+      color: inherit; }
+    atom-notification .close:active {
+      opacity: .2; }
+    atom-notification .close:before {
+      margin: 0;
+      color: inherit; }
+  atom-notification.has-detail {
+    width: 450px; }
+  atom-notification .detail {
+    font-size: .8em;
+    background-color: rgba(255, 255, 255, 0.3);
+    background-clip: padding-box;
+    max-height: 500px;
+    overflow-y: auto; }
+    atom-notification .detail .line {
+      white-space: pre;
+      font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace; }
+    atom-notification .detail .stack-toggle {
+      margin-top: 10px; }
+      atom-notification .detail .stack-toggle .icon:before {
+        margin: 0; }
+    atom-notification .detail .stack-container {
+      margin-top: 10px; }
+  atom-notification .description {
+    font-size: .8em; }
+    atom-notification .description p:last-child {
+      margin-bottom: 0; }
+  atom-notification .btn-toolbar {
+    margin-top: 10px; }
+  atom-notification .btn-copy-report {
+    vertical-align: middle; }
+
+atom-notification.fatal .content {
+  color: black;
+  background-color: #ff4d4d; }
+
+atom-notification.fatal a {
+  color: #660000; }
+
+atom-notification.fatal code {
+  color: black;
+  background-color: #fa2e2e; }
+
+atom-notification.fatal.icon:before {
+  color: #ff8585;
+  background-color: #c00; }
+
+atom-notification.fatal .close-all.btn {
+  border: 1px solid fadeout(black, 70%);
+  color: fadeout(black, 40%);
+  text-shadow: none; }
+  atom-notification.fatal .close-all.btn:hover {
+    background: none;
+    border-color: fadeout(black, 20%);
+    color: black; }
+
+atom-notification.error .content {
+  color: black;
+  background-color: #ff4d4d; }
+
+atom-notification.error a {
+  color: #660000; }
+
+atom-notification.error code {
+  color: black;
+  background-color: #fa2e2e; }
+
+atom-notification.error.icon:before {
+  color: #ff8585;
+  background-color: #c00; }
+
+atom-notification.error .close-all.btn {
+  border: 1px solid fadeout(black, 70%);
+  color: fadeout(black, 40%);
+  text-shadow: none; }
+  atom-notification.error .close-all.btn:hover {
+    background: none;
+    border-color: fadeout(black, 20%);
+    color: black; }
+
+atom-notification.warning .content {
+  color: #6c2c05;
+  background-color: #ffa380; }
+
+atom-notification.warning a {
+  color: #ce5509; }
+
+atom-notification.warning code {
+  color: #6c2c05;
+  background-color: #fb8c60; }
+
+atom-notification.warning.icon:before {
+  color: #ffccb8;
+  background-color: #ff4800; }
+
+atom-notification.warning .close-all.btn {
+  border: 1px solid fadeout(#6c2c05, 70%);
+  color: fadeout(#6c2c05, 40%);
+  text-shadow: none; }
+  atom-notification.warning .close-all.btn:hover {
+    background: none;
+    border-color: fadeout(#6c2c05, 20%);
+    color: #6c2c05; }
+
+atom-notification.info .content {
+  color: #112e4d;
+  background-color: #80cbff; }
+
+atom-notification.info a {
+  color: #2460a0; }
+
+atom-notification.info code {
+  color: #112e4d;
+  background-color: #60bcfb; }
+
+atom-notification.info.icon:before {
+  color: #b8e2ff;
+  background-color: #0098ff; }
+
+atom-notification.info .close-all.btn {
+  border: 1px solid fadeout(#112e4d, 70%);
+  color: fadeout(#112e4d, 40%);
+  text-shadow: none; }
+  atom-notification.info .close-all.btn:hover {
+    background: none;
+    border-color: fadeout(#112e4d, 20%);
+    color: #112e4d; }
+
+atom-notification.success .content {
+  color: #05371b;
+  background-color: #72efa8; }
+
+atom-notification.success a {
+  color: #0e9448; }
+
+atom-notification.success code {
+  color: #05371b;
+  background-color: #56e695; }
+
+atom-notification.success.icon:before {
+  color: #a4f5c7;
+  background-color: #17ca65; }
+
+atom-notification.success .close-all.btn {
+  border: 1px solid fadeout(#05371b, 70%);
+  color: fadeout(#05371b, 40%);
+  text-shadow: none; }
+  atom-notification.success .close-all.btn:hover {
+    background: none;
+    border-color: fadeout(#05371b, 20%);
+    color: #05371b; }
+
+atom-notification {
+  -webkit-animation: notification-show 0.16s cubic-bezier(0.175, 0.885, 0.32, 1.27499); }
+  atom-notification[type="fatal"] {
+    -webkit-animation: notification-show 0.16s cubic-bezier(0.175, 0.885, 0.32, 1.27499), notification-shake 4s 2s;
+    -webkit-animation-iteration-count: 1, 3; }
+    atom-notification[type="fatal"]:hover {
+      -webkit-animation-play-state: paused; }
+  atom-notification.remove,
+  atom-notification.remove:hover {
+    -webkit-animation: notification-hide 0.24s cubic-bezier(0.33859, -0.42, 1, -0.22), notification-shrink 0.24s 0.24s cubic-bezier(0.5, 0, 0, 1);
+    -webkit-animation-fill-mode: forwards; }
+
+@-webkit-keyframes notification-show {
+  0% {
+    opacity: 0;
+    transform: perspective(450px) translate(0, -30px) rotateX(90deg); }
+  100% {
+    opacity: 1;
+    transform: perspective(450px) translate(0, 0) rotateX(0deg); } }
+
+@-webkit-keyframes notification-hide {
+  0% {
+    opacity: 1;
+    transform: scale(1); }
+  100% {
+    opacity: 0;
+    transform: scale(0.8); } }
+
+@-webkit-keyframes notification-shrink {
+  0% {
+    opacity: 0;
+    max-height: 800px;
+    transform: scale(0.8); }
+  100% {
+    opacity: 0;
+    max-height: 0;
+    transform: scale(0.8); } }
+
+@-webkit-keyframes notification-shake {
+  0% {
+    transform: translateX(0); }
+  2% {
+    transform: translateX(-4px); }
+  4% {
+    transform: translateX(8px); }
+  6% {
+    transform: translateX(-4px); }
+  8% {
+    transform: translateX(0); }
+  100% {
+    transform: translateX(0); } }
+
+atom-notifications {
+  font-size: 14px; }
+  atom-notifications atom-notification:first-child.has-close .message {
+    padding-right: 120px; }
+  atom-notifications atom-notification:only-child.has-close .message,
+  atom-notifications atom-notification.has-close .message {
+    padding-right: 40px; }
+  atom-notifications atom-notification .item {
+    padding: 0.75em; }
+  atom-notifications atom-notification.icon:before {
+    padding-top: .85em; }
